about page alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1688,6 +1688,24 @@ a.active {
         border: 1px solid #656770;
         margin-bottom: 1rem;
     }
+    .card .image {
+        margin-top: 1rem;
+        margin-left: 24%;
+        height: 35%;
+        width: 33%;
+        float: left;
+        /* background-color: blue; */
+        border-radius: 50%;
+    }
+    
+    .about-hero .contant .team-name {
+        margin: 0;
+        padding: 0;
+        margin-top: 0;
+        text-align: center;
+        font-size: 1.3rem;
+        font-weight: 450;
+    }
 
 }
 
